css/helper.css
/* ... */
.container {
  position: relative;
  z-index: 999;
}
.container.small {
  width: 960px;
}
hr {
  height: 0;
  border: none;
  border-bottom: 1px solid rgba(0, 0, 0, 0.1);
  margin: 20px 0;
}
.light hr,
hr.light {
  border-color: rgba(255, 255, 255, 0.15);
}
p {
  margin-bottom: 20px;
}
img {
  display: block;
  max-width: 80%;
  height: auto;
}
.el-parallax {
  top: 0px;
}
/* Common
********************************************/
.full-wh {
  position: absolute;
  top: 0px;
  left: 0px;
  bottom: 0px;
  width: 100%;
}
.full-vh {
  position: absolute;
  /*top: 0px;*/
  left: 0px;
  right: 0px;
  height: 110vh;
  top: 50%;
  margin-top: -55vh;
}
.full-vh.vh120 {
  margin-top: -60vh;
}
.full-vh.vh130 {
  margin-top: -65vh;
}
.full-vh.vh140 {
  margin-top: -70vh;
}
.full-vh.vh150 {
  margin-top: -75vh;
}
.full-vh.vh160 {
  margin-top: -80vh;
}
.full-vh.vh170 {
  margin-top: -85vh;
}
.full-vh.vh180 {
  margin-top: -90vh;
}
.full-vh.vh190 {
  margin-top: -95vh;
}
.full-vh.vh200 {
  margin-top: -100vh;
}
section.no-border,
.section.no-border,
.no-border {
  border: none;
}
.pos-rel {
  position: relative;
}
.pos-abs {
  position: absolute;
}
.l0 {
  left: 0px;
}
.l2 {
  left: 2px;
}
.l4 {
  left: 4px;
}
.l6 {
  left: 6px;
}
.l8 {
  left: 8px;
}
.l10 {
  left: 10px;
}
.r0 {
  right: 0px;
}
.r2 {
  right: 2px;
}
.r4 {
  right: 4px;
}
.r6 {
  right: 6px;
}
.r8 {
  right: 8px;
}
.r10 {
  right: 10px;
}
.-b1 {
  bottom: -1px;
}
.b0 {
  bottom: 0px;
}
.b2 {
  bottom: 2px;
}
.b4 {
  bottom: 4px;
}
.b6 {
  bottom: 6px;
}
.b8 {
  bottom: 8px;
}
.b10 {
  bottom: 10px;
}
.t0 {
  top: 0px;
}
.t2 {
  top: 2px;
}
.t4 {
  top: 4px;
}
.t6 {
  top: 6px;
}
.t8 {
  top: 8px;
}
.t10 {
  top: 10px;
}
.t-auto {
  top: auto;
}
.b-auto {
  bottom: auto;
}
.l-auto {
  left: auto;
}
.r-auto {
  right: auto;
}
.list-reset {
  margin: 0px;
  padding: 0px;
  list-style-type: none;
}
/* z-index
=========================*/
.z-2 {
  z-index: -2;
}
.z-1 {
  z-index: -1;
}
.z0 {
  z-index: 0;
}
.z1 {
  z-index: 1;
}
.z2 {
  z-index: 200;
}
.z3 {
  z-index: 300;
}
.z4 {
  z-index: 400;
}
.z5 {
  z-index: 500;
}
.z6 {
  z-index: 600;
}
.z7 {
  z-index: 700;
}
.z8 {
  z-index: 800;
}
.z9 {
  z-index: 900;
}
.z10 {
  z-index: 1000;
}
/* Opacity
=========================*/
.op-0 {
  opacity: 0;
}
.op-001 {
  opacity: 0.01;
}
.op-002 {
  opacity: 0.02;
}
.op-003 {
  opacity: 0.03;
}
.op-004 {
  opacity: 0.04;
}
.op-005 {
  opacity: 0.05;
}
.op-006 {
  opacity: 0.06;
}
.op-007 {
  opacity: 0.07;
}
.op-008 {
  opacity: 0.08;
}
.op-009 {
  opacity: 0.09;
}
.op-01 {
  opacity: 0.1;
}
.op-02,
[data-hover-class*="op-02"]:hover {
  opacity: 0.2;
}
.op-03 {
  opacity: 0.3;
}
.op-04 {
  opacity: 0.4;
}
.op-05 {
  opacity: 0.5;
}
.op-06 {
  opacity: 0.6;
}
.op-07 {
  opacity: 0.7;
}
.op-08 {
  opacity: 0.8;
}
.op-09 {
  opacity: 0.9;
}
/*.op-1 { opacity: 1; }*/
[data-animate-in]:not(.animated) {
  opacity: 0;
}
/* Shadow
=========================*/
.shadow-large,
.hov-shadow-large:hover {
  -webkit-box-shadow: 0 3px 30px 0 rgba(0, 0, 0, 0.15);
          box-shadow: 0 3px 30px 0 rgba(0, 0, 0, 0.15);
}
.shadow-medium,
.hov-shadow-medium:hover {
  -webkit-box-shadow: 0 2px 20px 0 rgba(0, 0, 0, 0.15);
          box-shadow: 0 2px 20px 0 rgba(0, 0, 0, 0.15);
}
.shadow-small,
.hov-shadow-small:hover {
  -webkit-box-shadow: 0 2px 15px 0 rgba(0, 0, 0, 0.15);
          box-shadow: 0 2px 15px 0 rgba(0, 0, 0, 0.15);
}
.shadow-mini,
.hov-shadow-mini:hover {
  -webkit-box-shadow: 0 2px 10px 0 rgba(0, 0, 0, 0.15);
          box-shadow: 0 2px 10px 0 rgba(0, 0, 0, 0.15);
}
.shadow-tiny,
.hov-shadow-tiny:hover {
  -webkit-box-shadow: 0 1px 5px 0 rgba(0, 0, 0, 0.15);
          box-shadow: 0 1px 5px 0 rgba(0, 0, 0, 0.15);
}
.shadow-micro,
.hov-shadow-micro:hover {
  -webkit-box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.15);
          box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.15);
}
.shadow-1,
.hov-shadow-1:hover {
  -webkit-box-shadow: 0 4px 100px 4px rgba(0, 0, 0, 0.4);
          box-shadow: 0 4px 100px 4px rgba(0, 0, 0, 0.4);
}
.shadow-light-1,
.hov-shadow-1:hover {
  -webkit-box-shadow: 0 4px 100px 4px rgba(255, 255, 255, 0.1);
          box-shadow: 0 4px 100px 4px rgba(255, 255, 255, 0.1);
}
.shadow-2,
.hov-shadow-2:hover {
  -webkit-box-shadow: 0px 8px 60px 0px rgba(0, 0, 0, 0.26);
          box-shadow: 0px 8px 60px 0px rgba(0, 0, 0, 0.26);
}
/* Clearing
=========================*/
.nav-header:before,
.nav-header:after,
.nav-links:before,
.nav-links:after {
  content: '';
  display: table;
  clear: both;
}
/* Icon blocks
=========================*/
.iconwrp {
  margin-left: auto;
  margin-right: auto;
  display: -webkit-inline-box;
  display: -ms-inline-flexbox;
  display: inline-flex;
}
.iconwrp.l {
  margin-left: 0;
}
.iconwrp.r {
  margin-right: 0;
}
.iconbox {
  display: -webkit-inline-box;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
      -ms-flex-pack: center;
          justify-content: center;
  -webkit-box-align: center;
      -ms-flex-align: center;
          align-items: center;
}
/* Table
********************************************/
.table-responsive {
  border-color: rgba(0, 0, 0, 0.1);
}
.light.table-responsive {
  border-color: rgba(255, 255, 255, 0.1);
}
.tbl {
  width: 100%;
}
.tbl-border th,
.tbl-border td {
  border: 1px solid rgba(0, 0, 0, 0.1);
  border-collapse: collapse;
}
.light.tbl-border th,
.light.tbl-border td {
  border-color: rgba(255, 255, 255, 0.1);
}
.tbl td,
.tbl th {
  padding: 10px;
}
.pd-lr-10 th,
.pd-lr-10 td {
  padding-left: 10px;
  padding-right: 10px;
}
.pd-lr-15 th,
.pd-lr-15 td {
  padding-left: 15px;
  padding-right: 15px;
}
.pd-lr-20 th,
.pd-lr-20 td {
  padding-left: 20px;
  padding-right: 20px;
}
.pd-lr-30 th,
.pd-lr-30 td {
  padding-left: 30px;
  padding-right: 30px;
}
.pd-tb-10 th,
.pd-tb-10 td {
  padding-top: 10px;
  padding-bottom: 10px;
}
.pd-tb-15 th,
.pd-tb-15 td {
  padding-top: 15px;
  padding-bottom: 15px;
}
/* ... */

